5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1831_1644.log
== TEST (2019-06-13 17:05:53) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
for i in range:
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
	print(rep)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:06:44) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
	print(rep)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:07:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
print(rep)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:08:17) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
novovet = zeros(aluno, dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
print(rep)
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:08:39) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
novovet = zeros(size(aluno,) dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
print(rep)
print(novovet)
-- ERROR:
File "XXXX", line 5
    novovet = zeros(size(aluno,) dtype=int)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:08:48) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
print(rep)
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:09:23) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
		novovet[i] = [i]
print(rep)
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:09:32) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
		novovet[i] = aluno[i]
print(rep)
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:10:28) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:10:38) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
-- EXECUTION TIME:
1.15768
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:13:09) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]>=5.0):
		novovet[i] = i
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:13:25) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]>=5.0):
		novovet[i] = i
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:13:41) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]>=5.0):
		novovet[i] = [i]
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:13:48) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]>=5.0):
		novovet[i] = aluno[i]
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:14:02) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = aluno[i]
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:14:24) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		aluno[i] = novovet[i]
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:14:33) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		aluno[i] = novovet[i]
print(novovet)
-- EXECUTION TIME:
0.912647
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 0 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:15:10) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = [i]
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:15:28) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = i
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:16:08) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = i
print(novovet)
-- EXECUTION TIME:
0.899627
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:16:52) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		posicao = posicao + 1
		novovet[i] = posicao
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:17:15) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(aluno)):
	if(aluno[i]<5.0):
		posicao = posicao + 1
		novovet[i] = posicao
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:18:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		"ap"
	else:
		posicao = posicao + 1
		novovet[i] = posicao
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:18:45) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		posicao = posicao + 1
		novovet[i] = posicao
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:18:54) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		posicao = posicao + 1
		novovet[i] = posicao
print(novovet)
-- EXECUTION TIME:
0.997112
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[1 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 2 3 0 4]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[1 2 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:29:27) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		posicao = posicao + 1
		novovet[i] = posicao
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:33:45) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao = posicao + 1
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:34:08) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
posicao = posicao + 1
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:34:34) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
		posicao = posicao + 1
	else:
		posicao = posicao + 1
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:34:48) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(aluno)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
		posicao = posicao + 1
	else:
		posicao = posicao + 1
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:35:03) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao = posicao + 1
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:37:23) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = size(vet)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao = 1- posicao
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:37:33) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = size(aluno)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao = 1- posicao
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:37:45) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = size(aluno)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao =  posicao - 1
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:37:53) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = size(aluno)
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao =  posicao - 1
print(novovet)
-- EXECUTION TIME:
1.13953
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[11  0  9  0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 8 7 6 0 4]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[7 6 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:39:21) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(aluno)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao =  posicao + 1
print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:40:52) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao =  posicao + 1
	print(novovet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:41:04) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao =  posicao + 1
		print(novovet)
-- ERROR:
File "XXXX", line 20
    print(novovet)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:41:29) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:41:47) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
0.982855
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:41:54) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
2.92682
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:41:54) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
4.01076
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
3
[0 0 0]
[0 1 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:41:56) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
6.25462
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
3
[0 0 0]
[0 1 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:41:57) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
7.28885
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:41:58) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
8.14343
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:42:05) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
5.88614
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
3
[0 0 0]
[0 1 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:42:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
6.10738
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:42:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:42:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:42:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
6.15056
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:42:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
6.02634
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:42:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
5.95252
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:42:13) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
6.11844
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
3
[0 0 0]
[0 1 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
4
[0 0 0 0]
[0 0 2 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
6
[0 1 0 0 0 0]
[0 1 2 0 0 0]
[0 1 2 3 0 0]
[0 1 2 3 0 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:42:14) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- EXECUTION TIME:
6.6082
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
3
[0 0 0]
[0 1 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:

-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
[0 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:42:20) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao

		print(novovet)
	posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:43:33) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao = posicao + 1
	print(novovet)
	#posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:43:49) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
		posicao = posicao + 1
	print(novovet)
	#posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:44:03) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
posicao = posicao + 1
print(novovet)
	#posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:44:10) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao = posicao + 1
print(novovet)
	#posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:35:21) 
-- CODE:
from numpy import *
aluno = array(eval(input()))
ap = 0
rep = 0
#novovet = zeros(size(aluno), dtype=int)
for i in range(size(aluno)):
	if(aluno[i]>=5.0):
		ap = ap + 1
	else:
		rep = rep + 1
#		novovet[i] = aluno[i]
print(rep)
#print(novovet)
novovet = zeros(rep, dtype=int)
posicao = 0
for i in range(size(novovet)):
	if(aluno[i]<5.0):
		novovet[i] = posicao
	posicao = posicao + 1
print(novovet)
	#posicao = posicao + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
